{{$NEXT}}

0.92     2018-05-26

- Require Devel::PPPort 3.42. The included in the core with older perl
  versions leads to warnings when compiling XS code with newer Perls.


0.91     2018-05-26

- The generated Makefile.PL for XS modules. will add "-Wall" and "-Werror" as
  a compiler flags when AUTHOR_TESTING is true.


0.90     2018-05-13

- Added some hackish plugins to make tests run in parallel by default,
  including during the release phase.


0.89     2017-12-24

- The generated perlcriticrc now does a better job of selecting themes.


0.88     2017-11-21

- Removed the MinimumPerl plugin. It scans all sorts of non-perl files (like
  html) and comes up with bogus minimum versions because of that.


0.87     2017-11-18

- Add a has_xs configuration option. Normally this is determined by looking
  for XS files in the distro, but I have a new distro where I need to set this
  explicitly.


0.86     2017-11-12

- Added the MinimumPerl plugin.


0.85     2017-03-14

- Add Code::TidyAll::Plugin::SortLines::Naturally to develop prereqs for
  modules which use this bundle.


0.84     2017-03-14

- Use SortLines::Naturally tidyall plugin to sort lists of stopwords instead
  of SortLines.


0.83     2017-03-05

- Made tidyall.ini generation smarter and more configurable.

- Fix a formatting issue with the generated tidyall.ini when there were no
  global ignores.


0.82     2017-02-28

- Don't assume that our dzil and podweaver plugin bundles have the same
  prefix.


0.81     2017-02-01

- Require Code::TidyAll 0.56 so we can use the global ignore feature in the
  geneated tidyall.ini file.


0.80     2017-01-08

- Fix test failures related to how POD is generated when running in Travis.


0.79     2017-01-08

- Replaced DROLSKY::CheckChangesHasContent plugin with
  EnsureChangesHasContent.

- Replaced DROLSKY::VersionProvider with VersionFromMainModule.

- Improved some POD generation code and the POD which is generated.


0.78     2016-11-29
